--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,20 @@
 asgiref==3.5.0
+backcall==0.2.0
 Django==4.0.4
+django-autoslug==1.9.8
+iniconfig==1.1.1
+pickleshare==0.7.5
+#pillow==8.0.1 versão em desuso
+Pillow==9.1.0
+pluggy==0.13.1
+prompt-toolkit==3.0.29
+psycopg2==2.8.6
+py==1.11.0
+Pygments==2.12.0
+pyparsing==3.0.8
+six==1.16.0
 sqlparse==0.4.2
+toml==0.10.2
+traitlets==5.1.1
 tzdata==2022.1
+wcwidth==0.2.5
