--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,59 @@
 asgiref==3.5.0
+atomicwrites==1.4.0
+attrs==21.4.0
 backcall==0.2.0
+click==8.1.3
+cloudpickle==2.1.0
+colorama==0.4.5
+cramjam==2.5.0
+dask==2022.6.0
+distributed==2022.6.0
 Django==4.0.4
 django-autoslug==1.9.8
+django-debug-toolbar==3.3.0
 django-model-utils==4.2.0
+django-widget-tweaks==1.4.8
+ez-setup==0.9
+factories==1.2.0
+fastparquet==0.8.1
+fsspec==2022.5.0
+HeapDict==1.0.1
 iniconfig==1.1.1
+Jinja2==3.1.2
+locket==1.0.0
+MarkupSafe==2.1.1
+msgpack==1.0.4
+multitasking==0.0.10
+numpy==1.22.4
+packaging==21.3
+pandas==1.4.2
+partd==1.2.0
 pickleshare==0.7.5
 Pillow==9.1.0
 pluggy==0.13.1
 prompt-toolkit==3.0.29
+psutil==5.9.1
 psycopg2==2.9.3
 py==1.11.0
 Pygments==2.12.0
 pyparsing==3.0.8
+PyStore==0.1.23
+pytest==7.1.2
+pytest-django==4.5.2
+python-dateutil==2.8.2
+python-snappy==0.6.1
+pytz==2022.1
+PyYAML==6.0
 six==1.16.0
+sortedcontainers==2.4.0
 sqlparse==0.4.2
+tblib==1.7.0
 toml==0.10.2
+tomli==2.0.1
+toolz==0.11.2
+tornado==6.1
 traitlets==5.1.1
 tzdata==2022.1
+urllib3==1.26.9
 wcwidth==0.2.5
+zict==2.2.0
