--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,9 @@ dask==2022.6.0
 distributed==2022.6.0
 Django==4.0.4
 django-autoslug==1.9.8
+django-crispy-forms==1.14.0
 django-debug-toolbar==3.3.0
+django-localflavor==3.1
 django-model-utils==4.2.0
 django-widget-tweaks==1.4.8
 ez-setup==0.9
@@ -42,6 +44,7 @@ pytest==7.1.2
 pytest-django==4.5.2
 python-dateutil==2.8.2
 python-snappy==0.6.1
+python-stdnum==1.17
 pytz==2022.1
 PyYAML==6.0
 six==1.16.0
