--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ ez-setup==0.9
 factories==1.2.0
 fastparquet==0.8.1
 fsspec==2022.5.0
+gunicorn==20.1.0
 HeapDict==1.0.1
 iniconfig==1.1.1
 Jinja2==3.1.2
