--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,15 @@ cloudpickle==2.1.0
 colorama==0.4.5
 cramjam==2.5.0
 distributed==2022.6.0
+dj-database-url==0.5.0
+dj-static==0.0.6
 Django==4.0.4
 django-autoslug==1.9.8
 django-crispy-forms==1.14.0
 django-debug-toolbar==3.3.0
 django-localflavor==3.1
 django-model-utils==4.2.0
+django-on-heroku==1.1.2
 django-widget-tweaks==1.4.8
 ez-setup==0.9
 factories==1.2.0
@@ -36,6 +39,7 @@ pluggy==0.13.1
 prompt-toolkit==3.0.29
 psutil==5.9.1
 psycopg2==2.9.3
+psycopg2-binary==2.9.3
 py==1.11.0
 Pygments==2.12.0
 pyparsing==3.0.8
@@ -43,6 +47,7 @@ PyStore==0.1.23
 pytest==7.1.2
 pytest-django==4.5.2
 python-dateutil==2.8.2
+python-dotenv==0.20.0
 python-snappy==0.6.1
 python-stdnum==1.17
 pytz==2022.1
@@ -50,6 +55,7 @@ PyYAML==6.0
 six==1.16.0
 sortedcontainers==2.4.0
 sqlparse==0.4.2
+static3==0.7.0
 tblib==1.7.0
 toml==0.10.2
 tomli==2.0.1
@@ -59,4 +65,5 @@ traitlets==5.1.1
 tzdata==2022.1
 urllib3==1.26.9
 wcwidth==0.2.5
+whitenoise==6.2.0
 zict==2.2.0
